--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/material-bottom-tabs": "^6.2.20",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
@@ -18,7 +19,9 @@
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.15.0",
     "react-native-paper": "^5.12.3",
+    "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
