--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-paper": "^5.12.3",
+    "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
