--- a/package.json
+++ b/package.json
@@ -16,17 +16,25 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.2.1",
+    "@shopify/react-native-skia": "^0.1.241",
+    "d3-scale": "^4.0.2",
+    "expo-haptics": "~12.8.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-haptic-feedback": "^2.2.0",
     "react-native-paper": "^5.12.3",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.7.1",
+    "react-native-redash": "^18.1.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-svg": "^14.1.0",
+    "react-native-sms-retriever": "^1.1.1",
+    "react-native-svg": "^13.14.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-wagmi-charts": "^1.2.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0"
