--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@shopify/react-native-skia": "^0.1.241",
     "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
     "expo-haptics": "~12.8.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -32,7 +33,8 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-sms-retriever": "^1.1.1",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-wagmi-charts": "^1.2.4",
     "react-redux": "^9.1.0",
