--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
+    "react-native-otp-verify": "^1.1.8",
     "react-native-paper": "^5.12.3",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.7.1",
@@ -39,7 +40,8 @@
     "react-native-wagmi-charts": "^1.2.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
-    "redux-saga": "^1.3.0"
+    "redux-saga": "^1.3.0",
+    "rn-sms-retriever": "^1.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
