--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/material-bottom-tabs": "^6.2.20",
+    "@react-navigation/material-top-tabs": "^6.6.10",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
@@ -27,6 +28,7 @@
     "react-native-gesture-handler": "^2.15.0",
     "react-native-haptic-feedback": "^2.2.0",
     "react-native-otp-verify": "^1.1.8",
+    "react-native-pager-view": "^6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.7.1",
@@ -36,6 +38,7 @@
     "react-native-sms-retriever": "^1.1.1",
     "react-native-svg": "^12.1.1",
     "react-native-svg-charts": "^5.4.0",
+    "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-native-wagmi-charts": "^1.2.4",
     "react-redux": "^9.1.0",
