--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0",
-    "rn-sms-retriever": "^1.2.1"
+    "rn-sms-retriever": "^1.2.1",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
